@@ -2,3 +2,4 @@ distribution= Gumbel(beta = 1.5, gamma = -0.5)
 estimated distribution= Gumbel(beta = 1.51, gamma = -0.481)
 distribution= Beta(alpha = 2.3, beta = 2.2, a = -1, b = 1)
 estimated distribution= Beta(alpha = 2.28, beta = 2.2, a = -1, b = 1)
+estimated distribution= TruncatedNormal(mu = 0.805, sigma = 1.5, a = -0.784, b = 2.42)
