@@ -39,6 +39,7 @@
  * #1388 (Kolmogorov fails on a PythonDistribution)
  * #1403 (Python import otagrum throws an error)
  * #1405 (Most of the simulation algorithms for rare event fail on a coronavirus example)
+ * #1416 (MethodOfMomentsFactory has no setOptimizationBounds method)
 
 == 1.14 release (2019-11-13) == #release-1.14
 
